# finagent-8b

./: .env.example  .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: prompt_templates.py  tool_definitions.json
data/eval/: questions.jsonl
data/financial_docs/: earnings_analysis.txt  equity_valuation.txt  market_structure.txt  monetary_policy.txt  risk_management.txt
data/processed/: stats.json  train.jsonl  val.jsonl
data/seeds/: expanded_candidates.json  expanded_curated.json  financial_scenarios.json
finagent/: __init__.py  rag.py  tools.py
finagent/agents/: __init__.py  analyst.py  guard.py  research.py  supervisor.py
notebooks/: module2_qlora_finetune.ipynb  module3_agent_demo.ipynb
scripts/: agent_from_scratch.py  agent_langgraph.py  app.py  build_index.py  compare_agents.py  debug_pipeline.py  eval.py  expand_seeds.py  generate_dataset.py  multi_agent.py  prepare_dataset.py  rag_eval.py  slurm_train.sh  tools.py  train_qlora.py
tests/: test_execute_tools.py  test_multi_agent.py  test_parse_tool_calls.py  test_rag.py  test_tools.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothRLOOTrainer.py
wandb/: latest-run
wandb/run-20260303_110748-96for5s6/: run-96for5s6.wandb
wandb/run-20260303_110748-96for5s6/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260303_111925-i57eopry/: run-i57eopry.wandb
(+3 files in other folders)
